--- a/launch.html
+++ b/launch.html
@@ -174,8 +174,8 @@
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="http://www.unsist.com">Unsist</a></h4>
-                        <p>Unsist enables a responsible and sustainable energy future by helping Oil &amp; Gas companies improve hydrocarbon extraction by providing comprehensive datasets and proprietary predictive models.</p>
-                        <a class="btn btn-primary" href="/" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                        <p>Unsist enables a responsible and sustainable energy future, helping Oil &amp; Gas companies improve hydrocarbon extraction by providing comprehensive datasets and proprietary predictive models.</p>
+                        <a class="btn btn-primary" href="http://www.unsist.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -191,8 +191,8 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a4.jpg" alt="PetroRecruit"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Reinforcement Learning</a></h4>
-                        <p>Many iterative interactions such as the famous Prisoner's Dilemma can be modelled as Markov Decision Processes to <b><i>learn from each subsequent iteration</i></b>.</p>
+                        <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Paper: Reinforcement Learning</a></h4>
+                        <p>Many iterative interactions such as the famous Prisoner's Dilemma can be modelled as Markov Decision Processes to learn from each subsequent iteration.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a3.jpg" alt="Unsupervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">Unsupervised Learning</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">Paper: Unsupervised Learning</a></h4>
                         <p>Clustering and feature transformation are particularly useful in the absence - and support - of <b><i>a priori</i></b> domain knowledge (such as instance classification).</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
@@ -229,7 +229,7 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a2.jpg" alt="Random Optimization"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">Random Optimization</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">Paper: Random Optimization</a></h4>
                         <p>The optimal solution of a problem requires computing all possible combinations. Random optimization finds <b><i>near-optimal</i></b> solutions with a fraction of the time.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
@@ -249,8 +249,8 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a1.jpg" alt="Supervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">Supervised Learning</a></h4>
-                        <p>I used <b><i>5 supervised learning algorithms</i></b> using explore the accuracy of letter recognition, and the relationship between demographics and adult income in the US.</p>
+                        <h4><a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">Paper: Supervised Learning</a></h4>
+                        <p>I used <b><i>5 supervised learning algorithms</i></b> to explore the accuracy of letter recognition, and the relationship between demographics and adult income in the US.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                     <div class="col-sm-6">
                         <h4><a href="http://www.petrorecruit.com">PetroRecruit</a></h4>
                         <p>PetroRecruit matches Oil &amp; Gas trades expertise with global work opportunities by consolidating multiple online recruitment platforms into a single portal for employers and applicants.</p>
-                        <a class="btn btn-primary" href="/" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                        <a class="btn btn-primary" href="http://www.petrorecruit.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                     <div class="col-sm-6">
                         <h4><a href="http://www.greyadv.com">GreyADV</a></h4>
                         <p>GreyADV enables small-medium businesses to develop their online business presence through web development, social media marketing and ad campaign management.</p>
-                        <a class="btn btn-primary" href="/" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                        <a class="btn btn-primary" href="http://www.greyadv.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
