Update Facebook Metrics page

--- a/launch.html
+++ b/launch.html
@@ -100,11 +100,77 @@
         </div>
     </header>
 
-    <!-- Current Projects -->
-    <section id="current" class="about">
+    <!-- Startups -->
+    <section id="startups" class="about">
         <div class="container">
             <div class="row text-center">
-                <h2>Current Projects</h2>
+                <h2>Startups</h2>
+                <hr class="small">
+            </div>
+
+            <!-- Project Row -->
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-sm-4 col-sm-offset-1 text-center">
+                        <br>
+                        <a href="http://www.unsist.com">
+                        <img class="img-portfolio img-responsive" src="img/next-ai-venture-day.JPG" alt="Unsist"></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4><a href="http://www.unsist.com">Unsist</a> (2017-2018)</h4>
+                        <p>Unsist enables a responsible and sustainable energy future, helping Oil &amp; Gas companies improve hydrocarbon extraction by providing comprehensive datasets and proprietary predictive models.</p>
+                        <a class="btn btn-primary" href="http://www.unsist.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Project Row -->
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-sm-4 col-sm-offset-1 text-center">
+                        <br>
+                        <a href="http://www.petrorecruit.com">
+                        <img class="img-portfolio img-responsive" src="img/petrorecruit.JPG" alt="PetroRecruit"></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4><a href="http://www.petrorecruit.com">PetroRecruit</a> (2015-2016)</h4>
+                        <p>PetroRecruit matches Oil &amp; Gas trades expertise with global work opportunities by consolidating multiple online recruitment platforms into a single portal for employers and applicants.</p>
+                        <a class="btn btn-primary" href="http://www.petrorecruit.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Project Row -->
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-sm-4 col-sm-offset-1 text-center">
+                        <br>
+                        <a href="http://www.greyadv.com">
+                        <img class="img-portfolio img-responsive" src="img/greyadv.JPG" alt="GreyADV"></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4><a href="http://www.greyadv.com">GreyADV</a> (2015)</h4>
+                        <p>GreyADV enables small-medium businesses to develop their online business presence through web development, social media marketing and ad campaign management.</p>
+                        <a class="btn btn-primary" href="http://www.greyadv.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->                
+        </div>
+    </section>
+    <!-- /.Startups -->
+    <hr>
+
+
+    <!-- Projects -->
+    <section id="projects" class="about">
+        <div class="container">
+            <div class="row text-center">
+                <h2>Projects</h2>
                 <hr class="small">
             </div>
 
@@ -125,7 +191,7 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
 
 
@@ -146,41 +212,29 @@
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
 
 
-        </div>
-    </section>
-    <!-- /.Current Projects -->
-
-
-
-    <!-- Past Projects -->
-    <section id="past" class="about">
-        <div class="container">
-            <div class="row text-center">
-                <h2>Past Projects</h2>
-                <hr class="small">
-            </div>
 
             <!-- Project Row -->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
-                        <a href="http://www.unsist.com">
-                        <img class="img-portfolio img-responsive" src="img/next-ai-venture-day.JPG" alt="Unsist"></a>
+                        <a href="docs/facebook-metrics.html">
+                        <img class="img-portfolio img-responsive" src="img/facebook-metrics.JPG" alt="Facebook Metrics"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="http://www.unsist.com">Unsist</a></h4>
-                        <p>Unsist enables a responsible and sustainable energy future, helping Oil &amp; Gas companies improve hydrocarbon extraction by providing comprehensive datasets and proprietary predictive models.</p>
-                        <a class="btn btn-primary" href="http://www.unsist.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                        <h4><a href="docs/facebook-metrics.html">Facebook Engagement (Jupyter Notebook)</a></h4>
+                        <p>Advertising has changed significantly over the years with the prominence of Google and Facebook. This study explores the factors for effective posts, including brand, content and timing.</p>
+                        <a class="btn btn-primary" href="docs/facebook-metrics.html" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
+
 
             <!-- Project Row -->
             <div class="row">
@@ -191,13 +245,13 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a4.jpg" alt="PetroRecruit"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Paper: Reinforcement Learning</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Ikea Floor Plan Design &amp; Autonomous Drilling (Reinforcement Learning Paper)</a></h4>
                         <p>Many iterative interactions such as the famous Prisoner's Dilemma can be modelled as Markov Decision Processes to learn from each subsequent iteration.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
 
 
@@ -210,13 +264,13 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a3.jpg" alt="Unsupervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">Paper: Unsupervised Learning</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3">Adult Income &amp; Letter Recognition (Unsupervised Learning Paper)</a></h4>
                         <p>Clustering and feature transformation are particularly useful in the absence - and support - of <b><i>a priori</i></b> domain knowledge (such as instance classification).</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a3.pdf?pdf=gt-omscs-cs7641-a3" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
 
 
@@ -229,13 +283,13 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a2.jpg" alt="Random Optimization"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">Paper: Random Optimization</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2">Adult Income &amp; Letter Recognition (Random Optimization Paper)</a></h4>
                         <p>The optimal solution of a problem requires computing all possible combinations. Random optimization finds <b><i>near-optimal</i></b> solutions with a fraction of the time.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a2.pdf?pdf=gt-omscs-cs7641-a2" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
+            <hr class="small">
             <!-- /.row -->
 
 
@@ -249,53 +303,17 @@
                         <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a1.jpg" alt="Supervised Learning"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">Paper: Supervised Learning</a></h4>
+                        <h4><a href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1">Adult Income &amp; Letter Recognition (Supervised Learning Paper)</a></h4>
                         <p>I used <b><i>5 supervised learning algorithms</i></b> to explore the accuracy of letter recognition, and the relationship between demographics and adult income in the US.</p>
                         <a class="btn btn-primary" href="docs/gt-omscs-cs7641-a1.pdf?pdf=gt-omscs-cs7641-a1" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
-            <hr>
-            <!-- /.row -->                                    
-
-            <!-- Project Row -->
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="col-sm-4 col-sm-offset-1 text-center">
-                        <br>
-                        <a href="http://www.petrorecruit.com">
-                        <img class="img-portfolio img-responsive" src="img/petrorecruit.JPG" alt="PetroRecruit"></a>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4><a href="http://www.petrorecruit.com">PetroRecruit</a></h4>
-                        <p>PetroRecruit matches Oil &amp; Gas trades expertise with global work opportunities by consolidating multiple online recruitment platforms into a single portal for employers and applicants.</p>
-                        <a class="btn btn-primary" href="http://www.petrorecruit.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <!-- /.row -->
-
-            <!-- Project Row -->
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="col-sm-4 col-sm-offset-1 text-center">
-                        <br>
-                        <a href="http://www.greyadv.com">
-                        <img class="img-portfolio img-responsive" src="img/greyadv.JPG" alt="GreyADV"></a>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4><a href="http://www.greyadv.com">GreyADV</a></h4>
-                        <p>GreyADV enables small-medium businesses to develop their online business presence through web development, social media marketing and ad campaign management.</p>
-                        <a class="btn btn-primary" href="http://www.greyadv.com" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->            
+            <!-- /.row -->                                            
 
         </div>
     </section>
-    <!-- /.Past Projects -->
+    <!-- /.Projects -->
 
 
 
