Update Facebook Metrics page

--- a/launch.html
+++ b/launch.html
@@ -175,7 +175,7 @@
             </div>
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="stocks" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
@@ -196,7 +196,7 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="workout" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
@@ -218,7 +218,7 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="facebook" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
@@ -237,12 +237,12 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="reinforcement-learning" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
                         <a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">
-                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a4.jpg" alt="PetroRecruit"></a>
+                        <img class="img-portfolio img-responsive" src="img/gt-omscs-cs7641-a4.jpg" alt="Reinforcement Learning"></a>
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="docs/gt-omscs-cs7641-a4.pdf?pdf=gt-omscs-cs7641-a4">Ikea Floor Plan Design &amp; Autonomous Drilling (Reinforcement Learning Paper)</a></h4>
@@ -256,7 +256,7 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="unsupervised-learning" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
@@ -275,7 +275,7 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="random-optimization" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
@@ -295,7 +295,7 @@
 
 
             <!-- Project Row -->
-            <div class="row">
+            <div id="supervised-learning" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
                         <br>
