Update Google Ads image

--- a/learn.html
+++ b/learn.html
@@ -303,7 +303,7 @@
                         <div class="col-sm-12">
                             <div class="text-center">
                                 <p><a href="https://ads.google.com">
-                                <img src="img/google-adwords.jpg" alt="Google Adwords" height="150"></a></p>
+                                <img src="img/google.jpg" alt="Google" height="150"></a></p>
                             </div>
                         </div>
                         <div class="col-sm-12 service-item">
