--- a/index.html
+++ b/index.html
@@ -269,10 +269,12 @@
                     <h2>Speaking Engagements</h2>
                     <hr class="small">
                     <div class="col-md-10 col-md-offset-1">
+                        <!-- <p>I speak, advise, and host entrepreneurship seminars.</p> -->
                         <p>Did you attend today's AI seminar at the University of Alberta on <b class="text-primary">Commercializing Your Research</b>? Give feedback in the form below.</p>
                     </div>   
-
-                    <div class="typeform-widget" data-url="https://dudonwai1.typeform.com/to/u0kH2F" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 300px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #337ab7;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=u0kH2F&utm_source=typeform.com-12670087-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #337ab7" target="_blank">Typeform</a> </div>
+                    <div class="col-md-12">
+                        <div class="typeform-widget" data-url="https://dudonwai1.typeform.com/to/u0kH2F" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 450px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=u0kH2F&utm_source=typeform.com-12670087-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> 
+                        </div>
   
                 </div>
                 <!-- /.col-lg-10 -->
