Update after AI seminar

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <br>
             <div class="col-xs-12">
                 <h2><a href="#about" class="btn btn-dark btn-lg">Check Out My Story</a></h2>
-            </div>
+            </div>            
         </div>
     </header>
 
@@ -262,20 +262,41 @@
     </section>
 
 
-    <section id="projects" class="services">
+    <section id="speaking" class="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col-md-6 col-md-offset-3">
-                    <h2>Speaking Engagements</h2>
+                <div class="col-md-6 col-md-offset-3">                                        
+                    <h2>Community Engagement</h2>
                     <hr class="small">
                     <div class="col-md-10 col-md-offset-1">
-                        <!-- <p>I speak, advise, and host entrepreneurship seminars.</p> -->
-                        <p>Did you attend today's AI seminar at the University of Alberta on <b class="text-primary">Commercializing Your Research</b>? Give feedback in the form below.</p>
+
+                <!-- typeform -->
+                <!-- <p>Did you attend today's AI seminar at the University of Alberta on <b class="text-primary">Commercializing Your Research</b>? Give feedback in the form below.
+                        </p>
                     </div>   
                     <div class="col-md-12">
-                        <div class="typeform-widget" data-url="https://dudonwai1.typeform.com/to/u0kH2F" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 450px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=u0kH2F&utm_source=typeform.com-12670087-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> 
-                        </div>
-  
+                        <div class="typeform-widget" data-url="https://dudonwai1.typeform.com/to/u0kH2F" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 450px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">
+                        </div> -->
+                    </div>
+                </div>
+
+                <!-- /.typeform -->
+
+
+
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">                                        
+                    <h4 class="text-center">Previous Talks</h4>
+                    <div class="col-md-10 col-md-offset-1">
+                        <p><b><a href="https://www.amii.ca/events/">Commercializing Your Research</a></b>, AI seminar at the University of Alberta</p>
+                        <p><b><a href="https://www.eventbrite.ca/e/14th-annual-innovation-and-entrepreneurship-dinner-tickets-49562948112#">Founder Development at NEXT Canada</a></b>, eHUB 14th Annual Entrepreneurship Dinner at the University of Alberta</p>
+                        <p><b><a href="https://www.evensi.ca/cooperathon-toronto-pitch-clinic-canada/270281908">Pitch Clinic</a></b>, Desjardins annual Cooperathon innovation challenge</p>
+                        <p><b><a href="https://venturelab.ca/event/next-ai-information-session/">NextAI Alumni Experience</a></b>, VentureLAB information session</p>
+                        <!-- <p></p> -->
+                        </ul>
+                    </div>     
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -309,7 +330,7 @@
                             <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
-                    <p class="text-muted">Dudon Wai ~ 2018</p>
+                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2018</p>                    
                 </div>
             </div>
         </div>
