--- a/marketing/google-adwords-exam-help.html
+++ b/marketing/google-adwords-exam-help.html
@@ -1475,7 +1475,7 @@
                         </li>                   
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Dudon Wai ~ 2017</p>
+                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2018</p>   
                 </div>
             </div>
         </div>
