--- a/launch.html
+++ b/launch.html
@@ -175,27 +175,6 @@
             </div>
 
             <!-- Project Row -->
-            <div id="stocks" class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="col-sm-4 col-sm-offset-1 text-center">
-                        <br>
-                        <a href="#current">
-                        <img class="img-portfolio img-responsive" src="img/stock-trading-tools.JPG" alt="Stock Trading Tools"></a>
-                    </div>
-                    <div class="col-sm-6">
-                        <h4><a href="#current">Stock Trading Tools</a></h4>
-                        <p>Bloomberg for the average person. Get real-time data on the current stock market, perform routine technical analysis, and understand a company's fundamentals in search for undervalued stocks. </p>
-                        <div>
-                            <p class="text-primary">(Coming Soon)</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr class="small">
-            <!-- /.row -->
-
-
-            <!-- Project Row -->
             <div id="workout" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
@@ -215,6 +194,24 @@
             <hr class="small">
             <!-- /.row -->
 
+
+            <!-- Project Row -->
+            <div id="stocks" class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-sm-4 col-sm-offset-1 text-center">
+                        <br>
+                        <a href="#current">
+                        <img class="img-portfolio img-responsive" src="img/stock-trading-tools.JPG" alt="Stock Trading Tools"></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4><a href="#current">Stock Trading Tools</a></h4>
+                        <p>Tools you find on Bloomberg, but for the average person (and free!). Get real-time data on the current stock market, perform routine technical analysis, and understand a company's fundamentals in search for undervalued stocks. </p>
+                        <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1qwZB44VluZwhDaRDV_ZTnBkm1JOeZiFQnf0utAxMSmg/edit?usp=sharing" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
 
 
             <!-- Project Row -->
