--- a/launch.html
+++ b/launch.html
@@ -205,7 +205,7 @@
                     </div>
                     <div class="col-sm-6">
                         <h4><a href="#current">Stock Trading Tools</a></h4>
-                        <p>Tools you find on Bloomberg, but for the average person (and free!). Get real-time data on the current stock market, perform routine technical analysis, and understand a company's fundamentals in search for undervalued stocks. </p>
+                        <p>Real-time stock market data that is completely FREE using Google Finance &amp; Google Sheets. Feel free to comment, or download your own version to customize.</p>
                         <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1qwZB44VluZwhDaRDV_ZTnBkm1JOeZiFQnf0utAxMSmg/edit?usp=sharing" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
