Adding AIST talk

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="col-md-6 col-md-offset-3">                                        
                     <h4 class="text-center">Previous Talks</h4>
                     <div class="col-md-10 col-md-offset-1">
-                        <p><b><a href="https://www.youtube.com/watch?v=FLELRaAg7og"> Implementing Industrial AI with an Outcome-First Approach</p>
+                        <p><b><a href="https://www.youtube.com/watch?v=FLELRaAg7og"></a></b> Implementing Industrial AI with an Outcome-First Approach</p>
                         <p><b><a href="https://www.amii.ca/events/">Commercializing Your Research</a></b>, AI seminar at the University of Alberta</p>
                         <p><b><a href="https://www.eventbrite.ca/e/14th-annual-innovation-and-entrepreneurship-dinner-tickets-49562948112#">Founder Development at NEXT Canada</a></b>, eHUB 14th Annual Entrepreneurship Dinner at the University of Alberta</p>
                         <p><b><a href="https://www.evensi.ca/cooperathon-toronto-pitch-clinic-canada/270281908">Pitch Clinic</a></b>, Desjardins annual Cooperathon innovation challenge</p>
