--- a/launch.html
+++ b/launch.html
@@ -196,6 +196,24 @@
 
 
             <!-- Project Row -->
+            <div id="workout" class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-sm-4 col-sm-offset-1 text-center">
+                        <br>
+                        <a href="#current">
+                        <img class="img-portfolio img-responsive" src="img/workout-app.JPG" alt="FriendlyChat App"></a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h4><a href=https://friendlychat-f383e.firebaseapp.com/>Ask-Me-Anything App</a></h4>
+                        <p>Like <a href="https://www.reddit.com/r/AMA/">AMA</a> on Reddit, Ask me anything through this simple chat tool built using completely FREE tools. All you need is Firebase and Google sign-in.</p>
+                        <a class="btn btn-primary" href="https://friendlychat-f383e.firebaseapp.com/" target="_blank">Read More <i class="fa fa-angle-right"></i></a>                       
+                    </div>
+                </div>
+            </div>
+            <hr class="small">
+            <!-- /.row -->
+
+            <!-- Project Row -->
             <div id="stocks" class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="col-sm-4 col-sm-offset-1 text-center">
@@ -204,7 +222,7 @@
                         <img class="img-portfolio img-responsive" src="img/stock-trading-tools.JPG" alt="Stock Trading Tools"></a>
                     </div>
                     <div class="col-sm-6">
-                        <h4><a href="#current">Stock Trading Tools</a></h4>
+                        <h4><a href="https://docs.google.com/spreadsheets/d/1qwZB44VluZwhDaRDV_ZTnBkm1JOeZiFQnf0utAxMSmg/edit?usp=sharing">Stock Trading Tools</a></h4>
                         <p>Real-time stock market data that is completely FREE using Google Finance &amp; Google Sheets. Feel free to comment, or download your own version to customize.</p>
                         <a class="btn btn-primary" href="https://docs.google.com/spreadsheets/d/1qwZB44VluZwhDaRDV_ZTnBkm1JOeZiFQnf0utAxMSmg/edit?usp=sharing" target="_blank">Read More <i class="fa fa-angle-right"></i></a>
                     </div>
