Updated 2019 footer and CMTS talk

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             </div>
             <br>
             <div class="col-xs-12">
-                <h2><a href="#about" class="btn btn-dark btn-lg">Check Out My Story</a></h2>
+                <h2><a href="https://canvass.typeform.com/to/IMbSGn" class="btn btn-dark btn-lg">CMTS Survey</a></h2>-->
+                <!--<h2><a href="#about" class="btn btn-dark btn-lg">Check Out My Story</a></h2>-->
             </div>            
         </div>
     </header>
@@ -262,7 +263,7 @@
     </section>
 
 
-    <section id="speaking" class="services">
+    <section id="community" class="services">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-3">                                        
@@ -292,8 +293,8 @@
                 <div class="col-md-6 col-md-offset-3">                                        
                     <h4 class="text-center">2019 Talks</h4>
                     <div class="col-md-10 col-md-offset-1">
+                        <p><b><a href="https://canvass.typeform.com/to/IMbSGn">Why AI Is Necessary to ​Future-Proof Manufacturing​</a></b>, Canadian Manufacturing Technology Show</p>                        
                         <p><b><a href="https://www.youtube.com/watch?v=FLELRaAg7og">Implementing Industrial AI with an Outcome-First Approach</a></b>, Association for Iron and Steel Technology - Digital Transformation Forum</p>
-                        <!-- <p></p> -->
                         </ul>
                     </div>     
                 </div>
@@ -310,7 +311,6 @@
                         <p><b><a href="https://www.eventbrite.ca/e/14th-annual-innovation-and-entrepreneurship-dinner-tickets-49562948112#">Founder Development at NEXT Canada</a></b>, eHUB 14th Annual Entrepreneurship Dinner at the University of Alberta</p>
                         <p><b><a href="https://www.evensi.ca/cooperathon-toronto-pitch-clinic-canada/270281908">Pitch Clinic</a></b>, Desjardins annual Cooperathon innovation challenge</p>
                         <p><b><a href="https://venturelab.ca/event/next-ai-information-session/">NextAI Alumni Experience</a></b>, VentureLAB information session</p>
-                        <!-- <p></p> -->
                         </ul>
                     </div>     
                 </div>
@@ -347,7 +347,7 @@
                             <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
-                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2018</p>                    
+                    <p class="text-muted">Want to reach out? Send me a message at <a href="mailto:d@dudonwai.com?Subject=Hello" target="_top">d@dudonwai.com</a><br>Dudon Wai ~ 2019</p>                    
                 </div>
             </div>
         </div>
