Updated 2019 footer and CMTS talk

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <br>
             <div class="col-xs-12">
-                <h2><a href="https://canvass.typeform.com/to/IMbSGn" class="btn btn-dark btn-lg">CMTS Survey</a></h2>-->
+                <h2><a href="https://canvass.typeform.com/to/IMbSGn" class="btn btn-dark btn-lg">CMTS Survey</a></h2>
                 <!--<h2><a href="#about" class="btn btn-dark btn-lg">Check Out My Story</a></h2>-->
             </div>            
         </div>
