Updating home page copy

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-laptop fa-stack-1x" style="color:white"></i>
                         </span>                          
-                        <p>I built <b class="text-primary">software products</b> in the last 3 years, designing websites, developing marketplaces and deploying prediction models.</p>
+                        <p>I built <b class="text-primary">software products</b> in the last 5 years, launching data science tools, developing marketplaces and designing websites.</p>
                     </div>
                 </div>
             </div>
