Added an interactive form

--- a/canvass.html
+++ b/canvass.html
@@ -133,7 +133,7 @@
             <!-- Project Row -->
             <div id="workout" class="row">
                 <div class="col-sm-6">
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="1078" frameborder="0" marginheight="0" marginwidth="0"></iframe>
                 </div>
             </div>
             <hr class="small">
