--- a/canvass.html
+++ b/canvass.html
@@ -110,7 +110,7 @@
 
             <!-- Project Row -->
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-lg-8 col-lg-offset-2">
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRS_8rFmR8KlqaKgFDyItLp7QGK9Ju7ZS_jVZAzFuQ8m2k9w/viewform?embedded=true" width="640" height="1078" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
             </div>
@@ -132,7 +132,7 @@
 
             <!-- Project Row -->
             <div id="workout" class="row">
-                <div class="col-sm-6">
+                <div class="col-lg-8 col-lg-offset-2">
                     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="1078" frameborder="0" marginheight="0" marginwidth="0"></iframe>
                 </div>
             </div>
