--- a/canvass.html
+++ b/canvass.html
@@ -111,7 +111,7 @@
             <!-- Project Row -->
             <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRS_8rFmR8KlqaKgFDyItLp7QGK9Ju7ZS_jVZAzFuQ8m2k9w/viewform?embedded=true" width="640" height="1078" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRS_8rFmR8KlqaKgFDyItLp7QGK9Ju7ZS_jVZAzFuQ8m2k9w/viewform?embedded=true" width="600" height="1100" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
             </div>
             <hr class="small">
@@ -133,7 +133,7 @@
             <!-- Project Row -->
             <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTdhlCwNIHKTLpMmHO12_Xla22412Rd-Ih3aRm12or7zIYpzaTvnvyryg5syRcitKtghHGsqyoVbv6S/pubhtml?gid=1492193201&amp;single=true&amp;widget=true&amp;headers=true" width="640" height="300" frameborder="0" marginheight="0" marginwidth="0"></iframe>
                 </div>
             </div>
             <hr class="small">
